--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/499584536A'>iOS Software Engineer - Campinas - QuintoAndar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/499584536A'>iOS Software Engineer - Campinas - QuintoAndar</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... iOS Software Engineer responsibilities at QuintoAndar. Develop and maintain 
 QuintoAndar end-user applications for iOS; Write clean code and use code linting
@@ -114,7 +114,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698229034-senior-ios-engineer'>4Catalyzer Senior iOS Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698229034-senior-ios-engineer'>4Catalyzer Senior iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -168,7 +168,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/1365a115-9512-4dd8-b797-5245a320e72a'>Xfers - Lead iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/1365a115-9512-4dd8-b797-5245a320e72a'>Xfers - Lead iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -258,7 +258,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999697698605-sr-ios-engineer-for-leading-global-sportswear-brand'>Aroghia Group Sr. iOS Engineer for Leading Global Sportswear Brand | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999697698605-sr-ios-engineer-for-leading-global-sportswear-brand'>Aroghia Group Sr. iOS Engineer for Leading Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -284,7 +284,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxedwholesale/jobs/1918367'>Job Application for Senior iOS Engineer at Boxed</a></h5> 
+<h5><a href='https://boards.greenhouse.io/boxedwholesale/jobs/1918367'>Job Application for Senior iOS Engineer at Boxed</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -304,7 +304,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<h5><a href='https://general-ui.breezy.hr/p/b123d83dd87e-ios-consulting-engineer'>iOS Consulting Engineer at GenUI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://general-ui.breezy.hr/p/b123d83dd87e-ios-consulting-engineer'>iOS Consulting Engineer at GenUI</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -316,7 +316,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.talkdesk.com/careers/td/porto/engineering/fullstack-software-engineer-1700703?gh_jid=1700703'>Ios Software Engineer  [Lisbon] - Careers | Talkdesk</a></h5> 
+<h5><a href='https://www.talkdesk.com/careers/td/porto/engineering/fullstack-software-engineer-1700703?gh_jid=1700703'>Ios Software Engineer  [Lisbon] - Careers | Talkdesk</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -457,7 +457,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
